<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="cn.com.clb.mfremotecontrol.EditServerActivity">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/txtServerName"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:hint="@string/hint_name"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txtAddress"
        android:layout_below="@+id/txtServerName"
        android:layout_alignParentStart="true"
        android:hint="@string/addr_hint"
        />

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/txtPort"
        android:layout_alignTop="@+id/txtAddress"
        android:layout_toEndOf="@+id/txtAddress"
        android:hint="@string/hint_port"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:id="@+id/txtUsername"
        android:hint="@string/hint_username"
        android:layout_below="@+id/txtAddress"
        android:layout_alignParentStart="true"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/txtPassword"
        android:inputType="textPassword"
        android:hint="@string/hint_password"
        android:layout_below="@+id/txtUsername"
        android:layout_alignParentStart="true"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_update"
        android:id="@+id/btn_edit_update"
        android:layout_below="@+id/txtPassword"
        android:layout_alignParentStart="true"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btn_edit_cancel"
        android:text="@string/btn_cancel"
        android:layout_below="@+id/btn_edit_update"
        android:layout_alignParentStart="true"/>

</RelativeLayout>
